// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div>
  <div
    class="Search"
  >
    <form
      class="Search-input"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control form-control-lg"
          placeholder="Search"
          type="text"
          value=""
        />
        <div
          class="input-group-append"
        >
          <button
            class="btn btn-secondary"
            type="submit"
          >
            Search
          </button>
        </div>
        <button
          class="btn bg-transparent reset"
        >
          <i
            class="fa fa-times"
          />
        </button>
      </div>
    </form>
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-4"
        />
        <div
          class="col-sm-8"
        >
          <p>
            Loading...
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders 2`] = `
<div>
  <div
    class="Search"
  >
    <form
      class="Search-input"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control form-control-lg"
          placeholder="Search"
          type="text"
          value=""
        />
        <div
          class="input-group-append"
        >
          <button
            class="btn btn-secondary"
            type="submit"
          >
            Search
          </button>
        </div>
        <button
          class="btn bg-transparent reset"
        >
          <i
            class="fa fa-times"
          />
        </button>
      </div>
    </form>
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-4"
        />
        <div
          class="col-sm-8"
        />
      </div>
    </div>
  </div>
</div>
`;
